--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -1752,7 +1752,24 @@
     }
    },
    "source": [
-    "- An expert should assess which attributes for predicting **Equivalent age** in the discounted dataset are good"
+    "- An expert should assess which attributes for predicting **Equivalent age** in the discounted dataset are good\n",
+    "\n",
+    "- Some examples:\n",
+    "    - **Strabismus** and **separation of the abdominal muscle** [[1]]\n",
+    "    - **Mouth permanently open** [[2]]\n",
+    "    - **Fifth Finger Mid-Phalanx Hypoplasia** [[3]]\n",
+    "    - **Small ears** [[4]]\n",
+    "    \n",
+    "[1] [2] :*Bruce Buehler MD - Chair of Pediatrics UNMC - Director of the Munroe Meyer Institute for Genetics and Rehabilitation*\n",
+    "\n",
+    "[3]:*Sonographic demonstration of hypoplasia of the middle phalanx of the fifth digit: a finding associated with Down syndrome*\n",
+    "\n",
+    "[4]:*Centers for Disease Control and Prevention*\n",
+    "\n",
+    "[1]:https://www.unmc.edu/media/mmi/09Symposium/BuehlerSymposium09.pdf#page=12 \n",
+    "[2]:https://www.unmc.edu/media/mmi/09Symposium/BuehlerSymposium09.pdf#page=13\n",
+    "[3]:https://pubmed.ncbi.nlm.nih.gov/2969190/ \n",
+    "[4]:https://www.cdc.gov/ncbddd/birthdefects/downsyndrome.html"
    ]
   }
  ],
