--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -1755,11 +1755,12 @@
     "- An expert should assess which attributes for predicting **Equivalent age** in the discounted dataset are good\n",
     "\n",
     "- Some examples:\n",
-    "    - **Strabismus** and **separation of the abdominal muscle** [[1]]\n",
-    "    - **Mouth permanently open** [[2]]\n",
-    "    - **Fifth Finger Mid-Phalanx Hypoplasia** [[3]]\n",
-    "    - **Small ears** [[4]]\n",
-    "    \n",
+    ">    - **Strabismus** and **separation of the abdominal muscle** [[1]]\n",
+    ">    - **Mouth permanently open** [[2]] [[3]] (*A tongue that tends to stick out of the mouth* and *Poor muscle tone or loose joints*) \n",
+    ">    - **Fifth Finger Mid-Phalanx Hypoplasia** [[3]]\n",
+    ">    - **Small ears** [[4]]\n",
+    "\n",
+    "\n",
     "[1] [2] :*Bruce Buehler MD - Chair of Pediatrics UNMC - Director of the Munroe Meyer Institute for Genetics and Rehabilitation*\n",
     "\n",
     "[3]:*Sonographic demonstration of hypoplasia of the middle phalanx of the fifth digit: a finding associated with Down syndrome*\n",
