--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -150,7 +150,7 @@
     }
    },
    "source": [
-    "# Remove dependence of cronological age from attributes in order to predict the equivalent age of children affected by down syndrome and hence understand which metabolites will affect the children"
+    "# Remove dependency age from attributes in order to predict the equivalent age of children affected by down syndrome and hence understand which attributes could help to predict it"
    ]
   },
   {
