--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "metadata": {
     "cell_style": "split",
     "hideCode": false,
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "metadata": {
     "cell_style": "split",
     "hideCode": false,
@@ -555,12 +555,12 @@
    ],
    "source": [
     "target_attribute = \"Immunoglobuline A (mg/dl)\"\n",
-    "plot_predictions(df_to_transform, act_rfmae, input_attribute=input_attribute, target_attribute=target_attribute)"
+    "plot_predictions(df_to_transform, act_rfmae, input_attribute  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 11,
    "metadata": {
     "cell_style": "split",
     "hideCode": true,
@@ -577,7 +577,7 @@
        "                      n_estimators=38, n_jobs=-1, random_state=2020)"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 12,
    "metadata": {
     "cell_style": "split",
     "hideCode": true,
@@ -605,7 +605,7 @@
        "                      n_estimators=29, n_jobs=-1, random_state=2020)"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 13,
    "metadata": {
     "cell_style": "split",
     "slideshow": {
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 14,
    "metadata": {
     "cell_style": "split",
     "slideshow": {
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 15,
    "metadata": {
     "cell_style": "split",
     "hideCode": true,
@@ -713,7 +713,7 @@
        "                    n_estimators=38, n_jobs=-1, random_state=2020)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 16,
    "metadata": {
     "cell_style": "split",
     "hideCode": true,
@@ -741,7 +741,7 @@
        "                    n_estimators=29, n_jobs=-1, random_state=2020)"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 17,
    "metadata": {
     "cell_style": "split",
     "hideCode": false,
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 18,
    "metadata": {
     "cell_style": "split",
     "hideCode": false,
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 19,
    "metadata": {
     "cell_style": "split",
     "hideCode": true,
@@ -870,7 +870,7 @@
        "                      n_estimators=38, n_jobs=-1, random_state=2020)"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 20,
    "metadata": {
     "cell_style": "split",
     "hideCode": true,
@@ -898,7 +898,7 @@
        "                      n_estimators=29, n_jobs=-1, random_state=2020)"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 21,
    "metadata": {
     "cell_style": "split",
     "hideCode": false,
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 22,
    "metadata": {
     "cell_style": "split",
     "hideCode": false,
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 23,
    "metadata": {
     "cell_style": "split",
     "hideCode": true,
@@ -1014,7 +1014,7 @@
        "                    n_estimators=38, n_jobs=-1, random_state=2020)"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 24,
    "metadata": {
     "cell_style": "split",
     "hideCode": true,
@@ -1042,7 +1042,7 @@
        "                    n_estimators=29, n_jobs=-1, random_state=2020)"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 25,
    "metadata": {
     "cell_style": "split",
     "hideCode": false,
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 26,
    "metadata": {
     "cell_style": "split",
     "hideCode": false,
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 27,
    "metadata": {
     "cell_style": "split",
     "hideCode": true,
@@ -1172,7 +1172,7 @@
        "                      n_estimators=38, n_jobs=-1, random_state=2020)"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 28,
    "metadata": {
     "cell_style": "split",
     "hideCode": true,
@@ -1200,7 +1200,7 @@
        "                      n_estimators=29, n_jobs=-1, random_state=2020)"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 29,
    "metadata": {
     "cell_style": "split",
     "hideCode": false,
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 30,
    "metadata": {
     "cell_style": "split",
     "hideCode": false,
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 31,
    "metadata": {
     "cell_style": "split",
     "hideCode": true,
@@ -1317,7 +1317,7 @@
        "                    n_estimators=38, n_jobs=-1, random_state=2020)"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 32,
    "metadata": {
     "cell_style": "split",
     "hideCode": true,
@@ -1345,7 +1345,7 @@
        "                    n_estimators=29, n_jobs=-1, random_state=2020)"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 33,
    "metadata": {
     "cell_style": "split",
     "hideCode": false,
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 34,
    "metadata": {
     "cell_style": "split",
     "hideCode": false,
@@ -1457,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 35,
    "metadata": {
     "cell_style": "split",
     "hideCode": true,
@@ -1474,7 +1474,7 @@
        "                      n_estimators=38, n_jobs=-1, random_state=2020)"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 36,
    "metadata": {
     "cell_style": "split",
     "hideCode": true,
@@ -1502,7 +1502,7 @@
        "                      n_estimators=26, n_jobs=-1, random_state=2020)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1541,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 37,
    "metadata": {
     "cell_style": "split",
     "hideCode": false,
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 38,
    "metadata": {
     "cell_style": "split",
     "hideCode": false,
@@ -1601,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 39,
    "metadata": {
     "cell_style": "split",
     "hideCode": true,
@@ -1618,7 +1618,7 @@
        "                    n_estimators=38, n_jobs=-1, random_state=2020)"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1629,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 40,
    "metadata": {
     "cell_style": "split",
     "hideCode": true,
@@ -1646,7 +1646,7 @@
        "                    n_estimators=29, n_jobs=-1, random_state=2020)"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1670,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 41,
    "metadata": {
     "hideCode": false,
     "hidePrompt": false,
@@ -1756,7 +1756,7 @@
     "\n",
     "- Some examples:\n",
     ">    - **Strabismus** and **separation of the abdominal muscle** [[1]]\n",
-    ">    - **Mouth permanently open** [[2]] [[3]] (*A tongue that tends to stick out of the mouth* and *Poor muscle tone or loose joints*) \n",
+    ">    - **Mouth permanently open** [[2]] [[4]] (*A tongue that tends to stick out of the mouth* and *Poor muscle tone or loose joints*) \n",
     ">    - **Fifth Finger Mid-Phalanx Hypoplasia** [[3]]\n",
     ">    - **Small ears** [[4]]\n",
     "\n",
